--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Synthezing Moving People with 3D Control</title>
-
+  <style>
+        body {
+            background-color: black;
+            color: white; /* Set text color to white for better visibility on a black background */
+        }
+  </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
   <script>
