--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+        content="Synthezing Moving People with 3D Control">
+  <meta name="keywords" content="Diffusion Models, 3D">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Synthezing Moving People with 3D Control</title>
   <style>
