--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
 </head>
+  
 <body>
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -153,8 +154,8 @@
                   <span>Code</span>
                   </a>
               </span>
-<!--               <!-- Dataset Link. -->
-              <span class="link-block">
+              <!-- Dataset Link. -->
+<!--               <span class="link-block">
                 <a href="https://github.com/google/nerfies/releases/tag/0.1"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
