--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 </section>
 
 
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
@@ -470,6 +470,6 @@
     </div>
   </div>
 </footer>
-
+ -->
 </body>
 </html>
