--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Synthezing Moving People with 3D Control</title>
   <style>
         body {
-            background-color: black;
+            background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
   </style>
