--- a/index.html
+++ b/index.html
@@ -88,23 +88,24 @@
           <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control1</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://sites.google.com/site/boyilics/home">Keunhong Park</a><sup>1</sup>,</span>
+              <a href="https://sites.google.com/site/boyilics/home">Keunhong Park</a>,</span>
             <span class="author-block">
-              <a href="https://people.eecs.berkeley.edu/~jathushan/">Utkarsh Sinha</a><sup>2</sup>,</span>
+              <a href="https://people.eecs.berkeley.edu/~jathushan/">Utkarsh Sinha</a>,</span>
             <span class="author-block">
-              <a href="https://yossigandelsman.github.io/">Jonathan T. Barron</a><sup>2</sup>,
+              <a href="https://yossigandelsman.github.io/">Jonathan T. Barron</a>,
             </span>
             <span class="author-block">
-              <a href="https://people.eecs.berkeley.edu/~efros/">Sofien Bouaziz</a><sup>2</sup>,
+              <a href="https://people.eecs.berkeley.edu/~efros/">Sofien Bouaziz</a>,
             </span>
             <span class="author-block">
-              <a href="https://people.eecs.berkeley.edu/~malik/">Dan B Goldman</a><sup>2</sup>,
+              <a href="https://people.eecs.berkeley.edu/~malik/">Dan B Goldman</a>,
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University of Washington,</span>
-            <span class="author-block"><sup>2</sup>Google Research</span>
+            <span class="author-block">UC Berkeley</span>
+<!--             <span class="author-block"><sup>1</sup>University of Washington,</span>
+            <span class="author-block"><sup>2</sup>Google Research</span> -->
           </div>
 
           <div class="column has-text-centered">
