--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <a href="https://people.eecs.berkeley.edu/~efros/">Sofien Bouaziz</a>,
             </span>
             <span class="author-block">
-              <a href="https://people.eecs.berkeley.edu/~malik/">Dan B Goldman</a>,
+              <a href="https://people.eecs.berkeley.edu/~malik/">Dan B Goldman</a>
             </span>
           </div>
 
