--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
       <div class="column is-8">
         <div class="content">
           <p>
-            This website template is borrowed from <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>.
+            We thank the template from <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>!
           </p>
         </div>
       </div>
