--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 </head>
   
 <body>
+<style>
+      body {
+          background-color: black !important;
+          color: white; /* Set text color to white for better visibility on a black background */
+      }
+</style>
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
