--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 <style>
       body {
-          background-color: black !important;
+          background-color: black;
           color: white; /* Set text color to white for better visibility on a black background */
       }
 </style>
@@ -478,7 +478,8 @@
   </div>
 </footer>
  -->
-<footer class="footer">
+ We thank the template from <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>!
+<!-- <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
@@ -490,6 +491,6 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> -->
 </body>
 </html>
