--- a/index.html
+++ b/index.html
@@ -478,8 +478,13 @@
   </div>
 </footer>
  -->
- We thank the template from <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>!
-<!-- <footer class="footer">
+<footer class="footer">
+  <style>
+        body {
+            background-color: black !important;
+            color: white; /* Set text color to white for better visibility on a black background */
+        }
+  </style>
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
@@ -491,6 +496,6 @@
       </div>
     </div>
   </div>
-</footer> -->
+</footer>
 </body>
 </html>
