--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
+        .navbar {
+            background-color: black;
+            color: white; /* Set text color to white for better visibility on a black background */
+            padding: 10px; /* Optional: Add padding for better aesthetics */
+        }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -479,12 +484,6 @@
 </footer>
  -->
 <footer class="footer">
-  <style>
-        body {
-            background-color: black !important;
-            color: white; /* Set text color to white for better visibility on a black background */
-        }
-  </style>
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
