--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
             color: white; /* Set text color to white for better visibility on a black background */
         }
         .navbar {
-            background-color: black;
+            background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
-            padding: 10px; /* Optional: Add padding for better aesthetics */
         }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
