--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
           background-color: black;
           color: white; /* Set text color to white for better visibility on a black background */
       }
+      .navbar {
+            background-color: black !important;
+            color: white; /* Set text color to white for better visibility on a black background */
+        }
 </style>
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
