--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
+        #BibTeX {
+            background-color: black !important;
+            color: white; /* Set text color to white for better visibility on a black background */
+        }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
