--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
+      #BibTeX {
+            background-color: black !important;
+            color: white; /* Set text color to white for better visibility on a black background */
+        }
 </style>
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
