--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
   
 <body>
 <style>
-      body {
+  background-color: black !important;
+  color: white; /* Set text color to white for better visibility on a black background */
+</style>
+
+<!-- body {
           background-color: black;
           color: white; /* Set text color to white for better visibility on a black background */
       }
@@ -67,8 +71,7 @@
       #BibTeX {
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
-        }
-</style>
+        } -->
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
