--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
-        #BibTeX {
+        .footer {
+            background-color: black !important;
+            color: white; /* Set text color to white for better visibility on a black background */
+        }
+        .section {
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
@@ -56,11 +60,7 @@
   
 <body>
 <style>
-  background-color: black !important;
-  color: white; /* Set text color to white for better visibility on a black background */
-</style>
-
-<!-- body {
+      body {
           background-color: black;
           color: white; /* Set text color to white for better visibility on a black background */
       }
@@ -68,10 +68,13 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
-      #BibTeX {
+      .BibTeX {
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
-        } -->
+        }
+</style>
+
+
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
