--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         }
         .footer {
             background-color: black !important;
-            color: white; /* Set text color to white for better visibility on a black background */
         }
         .section {
             background-color: black !important;
@@ -68,10 +67,13 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
-      .BibTeX {
+      .footer {
             background-color: black !important;
-            color: white; /* Set text color to white for better visibility on a black background */
         }
+      .section {
+          background-color: black !important;
+          color: white; /* Set text color to white for better visibility on a black background */
+      }
 </style>
 
 
