--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
           background-color: black !important;
           color: white; /* Set text color to white for better visibility on a black background */
       }
+      .section h2 {
+            color: white; /* Set the title color to white */
+        }
 </style>
 
 
