--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           background-color: black !important;
           color: white; /* Set text color to white for better visibility on a black background */
       }
-      h1, h2, h3, h4, h5, h6 {
+      .section h1, h2, h3, h4, h5, h6 {
             color: white; /* Set the title color to white */
         }
 </style>
@@ -118,7 +118,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control1</h1>
+          <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://sites.google.com/site/boyilics/home">Keunhong Park</a>,</span>
