--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           background-color: black !important;
           color: white; /* Set text color to white for better visibility on a black background */
       }
-      .section h1, h2, h3, h4, h5, h6 {
+      .section h1, h2 {
             color: white; /* Set the title color to white */
         }
 </style>
