--- a/index.html
+++ b/index.html
@@ -70,12 +70,15 @@
       .footer {
             background-color: black !important;
         }
-      .section {
-          background-color: black !important;
+      .section h1 {
+          background-color: #82CAFF !important;
           color: white; /* Set text color to white for better visibility on a black background */
       }
-      h1, h2 {
-            color: white; /* Set the title color to white */
+      .section h2 {
+            color: white !important; /* Set the title color to white */
+        }
+      .section h3 {
+            color: #FED8B1 !important; /* Set the title color to white */
         }
 </style>
 
@@ -118,7 +121,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control</h1>
+          <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control1</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://sites.google.com/site/boyilics/home">Keunhong Park</a>,</span>
@@ -433,12 +436,12 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
+    @article{park2021nerfies,
   author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
   title     = {Nerfies: Deformable Neural Radiance Fields},
   journal   = {ICCV},
   year      = {2021},
-}</code></pre>
+}
   </div>
 </section>
 
