--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
       .footer {
             background-color: black !important;
         }
-      .section h1 {
-          background-color: #82CAFF !important;
-          color: white; /* Set text color to white for better visibility on a black background */
+      .hero {
+          color: #82CAFF !important; /* Set text color to white for better visibility on a black background */
       }
       .section h2 {
             color: white !important; /* Set the title color to white */
@@ -436,12 +435,12 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    @article{park2021nerfies,
+    <pre><code>@article{park2021nerfies,
   author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
   title     = {Nerfies: Deformable Neural Radiance Fields},
   journal   = {ICCV},
   year      = {2021},
-}
+}</code></pre>
   </div>
 </section>
 
