--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control1</h1>
+          <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://sites.google.com/site/boyilics/home">Keunhong Park</a>,</span>
