--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
         }
       .footer {
             background-color: black !important;
+            color: #9F8C76 !important;
         }
-      .h1 {
+      .publication-title {
           color: #82CAFF !important; /* Set text color to white for better visibility on a black background */
       }
       .section h2 {
