--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
             color: #9F8C76 !important;
         }
       .publication-title {
-          color: #82CAFF !important; /* Set text color to white for better visibility on a black background */
+          color: #87CEFA !important; /* Set text color to white for better visibility on a black background */
+      }
+      .subtitle {
+          color: #FED8B1 !important; /* Set text color to white for better visibility on a black background */
       }
       .section h2 {
             color: #FED8B1 !important; /* Set the title color to white */
