--- a/index.html
+++ b/index.html
@@ -440,10 +440,10 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+  author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efro, Alexei A. and Malik, Jitendra},
+  title     = {Synthesizing Moving People with 3D Control},
+  journal   = {Arxiv},
+  year      = {2024},
 }</code></pre>
   </div>
 </section>
