--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
+      .hero {
+            background-color: black !important;
+            color: white; /* Set text color to white for better visibility on a black background */
+        }
       .footer {
             background-color: black !important;
             color: #9F8C76 !important;
@@ -127,17 +131,17 @@
           <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://sites.google.com/site/boyilics/home">Keunhong Park</a>,</span>
+              <a href="https://sites.google.com/site/boyilics/home">Boyi Li</a>,</span>
             <span class="author-block">
-              <a href="https://people.eecs.berkeley.edu/~jathushan/">Utkarsh Sinha</a>,</span>
+              <a href="https://people.eecs.berkeley.edu/~jathushan/">Jathushan Rajasegaran</a>,</span>
             <span class="author-block">
-              <a href="https://yossigandelsman.github.io/">Jonathan T. Barron</a>,
+              <a href="https://yossigandelsman.github.io/">Yossi Gandelsman</a>,
             </span>
             <span class="author-block">
-              <a href="https://people.eecs.berkeley.edu/~efros/">Sofien Bouaziz</a>,
+              <a href="https://people.eecs.berkeley.edu/~efros/">Alexei A. Efros</a>,
             </span>
             <span class="author-block">
-              <a href="https://people.eecs.berkeley.edu/~malik/">Dan B Goldman</a>
+              <a href="https://people.eecs.berkeley.edu/~malik/">Jitendra Malik</a>
             </span>
           </div>
 
