--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
+      .container {
+            background-color: black !important;
+            color: white; /* Set text color to white for better visibility on a black background */
+        }
       .footer {
             background-color: black !important;
             color: #9F8C76 !important;
