--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             color: #9F8C76 !important;
         }
       .publication-title {
-          color: #5CB3FF !important; /* Set text color to white for better visibility on a black background */
+          color: #EFF8FB !important; /* Set text color to white for better visibility on a black background */
       }
       .subtitle {
           color: #FED8B1 !important; /* Set text color to white for better visibility on a black background */
