--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
-      .container {
+      .code {
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
@@ -80,7 +80,7 @@
             color: #9F8C76 !important;
         }
       .publication-title {
-          color: #EFF8FB !important; /* Set text color to white for better visibility on a black background */
+          color: #FFAE42 !important; /* Set text color to white for better visibility on a black background */
       }
       .subtitle {
           color: #FED8B1 !important; /* Set text color to white for better visibility on a black background */
