--- a/index.html
+++ b/index.html
@@ -75,12 +75,15 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
+      .author-block a {
+            color: #82CAFF; /* Set the link color within the author block to white */
+        }
       .footer {
             background-color: black !important;
             color: #9F8C76 !important;
         }
       .publication-title {
-          color: #FFAE42 !important; /* Set text color to white for better visibility on a black background */
+          color: #81D8D0 !important; /* Set text color to white for better visibility on a black background #FFAE42 */ 
       }
       .subtitle {
           color: #FED8B1 !important; /* Set text color to white for better visibility on a black background */
