--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
-      .author-block a {
+      .author-block {
             color: #82CAFF; /* Set the link color within the author block to white */
         }
       .footer {
