--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             color: #9F8C76 !important;
         }
       .publication-title {
-          color: #81D8D0 !important; /* Set text color to white for better visibility on a black background #FFAE42 */ 
+          color: #00BFFF !important; /* Set text color to white for better visibility on a black background #FFAE42 */ 
       }
       .subtitle {
           color: #FED8B1 !important; /* Set text color to white for better visibility on a black background */
