--- a/index.html
+++ b/index.html
@@ -78,12 +78,15 @@
       .author-block {
             color: #82CAFF; /* Set the link color within the author block to white */
         }
+      .publication-authors {
+            color: #82CAFF; /* Set the link color within the author block to white */
+        }
       .footer {
             background-color: black !important;
             color: #9F8C76 !important;
         }
       .publication-title {
-          color: #00BFFF !important; /* Set text color to white for better visibility on a black background #FFAE42 */ 
+          color: #FED8B1 !important; /* Set text color to white for better visibility on a black background #FFAE42 */ 
       }
       .subtitle {
           color: #FED8B1 !important; /* Set text color to white for better visibility on a black background */
