--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       .author-block {
             color: #82CAFF; /* Set the link color within the author block to white */
         }
-      .publication-authors {
+      .hero-body {
             color: #82CAFF; /* Set the link color within the author block to white */
         }
       .footer {
@@ -407,7 +407,7 @@
                  preload
                  playsinline
                  width="75%">
-            <source src="./static/videos/replay.mp4"
+            <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
         </div>
