--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           <p>
             Make the man dance like the performer.
           </p>
-          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
+          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%" autoplay>
             <source src="./static/videos/testcvpr10_27.mp4"
                     type="video/mp4">
           </video>
@@ -375,7 +375,7 @@
             <p>
               Make the man dance like the performer.
             </p>
-            <video id="matting-video" controls playsinline height="100%">
+            <video id="matting-video" controls playsinline height="100%" autoplay>
               <source src="./static/videos/testcvpr4_22.mp4"
                       type="video/mp4">
             </video>
@@ -405,7 +405,7 @@
                  muted
                  preload
                  playsinline
-                 width="75%">
+                 width="75%" autoplay>
             <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
@@ -434,7 +434,7 @@
                  muted
                  preload
                  playsinline
-                 width="75%">
+                 width="75%" autoplay>
             <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
