--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             Make the man dance like the performer.
           </p>
           <video id="dollyzoom" autoplay controls muted loop playsinline height="100%" autoplay>
-            <source src="./static/videos/testcvpr10_27.mp4"
+            <source src="./static/videos/testcvpr10b27.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -376,7 +376,7 @@
               Make the man dance like the performer.
             </p>
             <video id="matting-video" controls playsinline height="100%" autoplay>
-              <source src="./static/videos/testcvpr4_22.mp4"
+              <source src="./static/videos/testcvpr4b22.mp4"
                       type="video/mp4">
             </video>
           </div>
@@ -444,6 +444,35 @@
     </div>
     <!--/ Animation. -->
 
+    <!-- Animation. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">3D</h2>
+
+        <!-- Re-rendering. -->
+        <h3 class="title is-4">3DHM Enables Animations Only from Back</h3>
+        <div class="content has-text-justified">
+          <p>
+            Using 3D, you can predict human videos by only seeing the backside of the human photo.
+          </p>
+        </div>
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 width="75%" autoplay>
+            <source src="./static/videos/v1.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <!--/ Re-rendering. -->
+
+      </div>
+    </div>
+    <!--/ Animation. -->
+
 
     <!-- Animation. -->
     <div class="columns is-centered">
@@ -473,6 +502,8 @@
       </div>
     </div>
     <!--/ Animation. -->
+
+    
 
     <!-- Animation. -->
     <div class="columns is-centered">
@@ -531,6 +562,8 @@
       </div>
     </div>
     <!--/ Animation. -->
+
+    
 
 
     <!-- Concurrent Work. -->
