--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
           <p>
             Make the man dance like the performer.
           </p>
-          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%" autoplay>
-            <source src="./static/videos/testcvpr10b27.mp4"
+          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/testcvpr10_27.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -375,8 +375,8 @@
             <p>
               Make the man dance like the performer.
             </p>
-            <video id="matting-video" controls playsinline height="100%" autoplay>
-              <source src="./static/videos/testcvpr4b22.mp4"
+            <video id="matting-video" controls playsinline height="100%"y>
+              <source src="./static/videos/testcvpr4_22.mp4"
                       type="video/mp4">
             </video>
           </div>
