--- a/index.html
+++ b/index.html
@@ -352,40 +352,65 @@
 
     <div class="columns is-centered">
 
-      <!-- Visual Effects. -->
-      <div class="column">
-        <div class="content">
-          <h2 class="title is-3">Visual Effects</h2>
+    <!-- Animation. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Animation</h2>
+
+        <!-- Re-rendering. -->
+        <h3 class="title is-4">Re-rendering the input video</h3>
+        <div class="content has-text-justified">
           <p>
             Make the man dance like the performer.
           </p>
-          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
+        </div>
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 width="75%" autoplay>
             <source src="./static/videos/testcvpr10_27.mp4"
                     type="video/mp4">
           </video>
         </div>
-      </div>
-      <!--/ Visual Effects. -->
+        <!--/ Re-rendering. -->
 
-      <!-- Matting. -->
-      <div class="column">
-        <h2 class="title is-3">Matting</h2>
-        <div class="columns is-centered">
-          <div class="column content">
-            <p>
-              Make the man dance like the performer.
-            </p>
-            <video id="matting-video" controls playsinline height="100%"y>
-              <source src="./static/videos/testcvpr4_22.mp4"
-                      type="video/mp4">
-            </video>
-          </div>
-
-        </div>
       </div>
     </div>
-    <!--/ Matting. -->
+    <!--/ Animation. -->
 
+    <!-- Animation. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Animation</h2>
+
+        <!-- Re-rendering. -->
+        <h3 class="title is-4">Re-rendering the input video</h3>
+        <div class="content has-text-justified">
+          <p>
+            Make the man dance like the performer.
+          </p>
+        </div>
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 width="75%" autoplay>
+            <source src="./static/videos/testcvpr4_22.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <!--/ Re-rendering. -->
+
+      </div>
+    </div>
+    <!--/ Animation. -->
+
+    
     <!-- Animation. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
