--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <h2 class="title is-3">Animation</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Re-rendering the input video</h3>
+<!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
         <div class="content has-text-justified">
           <p>
             Make the man dance like the performer.
