--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 <section class="section">
   <div class="container is-max-desktop">
 
-    <div class="columns is-centered">
+<!--     <div class="columns is-centered"> -->
 
     <!-- Animation. -->
     <div class="columns is-centered">
