--- a/index.html
+++ b/index.html
@@ -140,17 +140,17 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control*</h1>
           <div class="is-size-5 publication-authors">
-            <span class="author-block">
+            <span class="author-block" style="color: #82CAFF;">
               <a href="https://sites.google.com/site/boyilics/home">Boyi Li</a>,</span>
-            <span class="author-block">
+            <span class="author-block" style="color: #82CAFF;">
               <a href="https://people.eecs.berkeley.edu/~jathushan/">Jathushan Rajasegaran</a>,</span>
-            <span class="author-block">
+            <span class="author-block" style="color: #82CAFF;">
               <a href="https://yossigandelsman.github.io/">Yossi Gandelsman</a>,
             </span>
-            <span class="author-block">
+            <span class="author-block" style="color: #82CAFF;">
               <a href="https://people.eecs.berkeley.edu/~efros/">Alexei A. Efros</a>,
             </span>
-            <span class="author-block">
+            <span class="author-block" style="color: #82CAFF;">
               <a href="https://people.eecs.berkeley.edu/~malik/">Jitendra Malik</a>
             </span>
           </div>
