--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
-      .code {
+      .pre {
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
@@ -370,7 +370,7 @@
                  muted
                  preload
                  playsinline
-                 width="75%" autoplay>
+                 height="100%" autoplay>
             <source src="./static/videos/v2.mp4"
                     type="video/mp4">
           </video>
@@ -399,7 +399,7 @@
                  muted
                  preload
                  playsinline
-                 width="75%" autoplay>
+                 height="100%" autoplay>
             <source src="./static/videos/v3.mp4"
                     type="video/mp4">
           </video>
@@ -429,7 +429,7 @@
                  muted
                  preload
                  playsinline
-                 width="75%" autoplay>
+                 height="100%" autoplay>
             <source src="./static/videos/v4.mp4"
                     type="video/mp4">
           </video>
@@ -458,7 +458,7 @@
                  muted
                  preload
                  playsinline
-                 width="75%" autoplay>
+                 height="100%" autoplay>
             <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
@@ -487,7 +487,7 @@
                  muted
                  preload
                  playsinline
-                 width="75%" autoplay>
+                 height="100%" autoplay>
             <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
@@ -517,7 +517,7 @@
                  muted
                  preload
                  playsinline
-                 width="75%" autoplay>
+                 height="100%" autoplay>
             <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
@@ -548,7 +548,7 @@
                  muted
                  preload
                  playsinline
-                 width="75%" autoplay>
+                 height="100%" autoplay>
             <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
@@ -577,7 +577,7 @@
                  muted
                  preload
                  playsinline
-                 width="75%" autoplay>
+                 height="100%" autoplay>
             <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
