--- a/index.html
+++ b/index.html
@@ -234,26 +234,26 @@
   </div>
 </section>
 
-
+<!-- testcvpr4_27.mp4 testcvpr12_11.mp4 testcvpr16_21.mp4 -->
 <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
           <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/testcvpr4_27.mp4"
+            <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-chair-tp">
           <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/testcvpr12_11.mp4"
+            <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-shiba">
           <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/testcvpr16_21.mp4"
+            <source src="./static/videos/v1.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -498,9 +498,9 @@
         <!-- Re-rendering. -->
 <!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
         <div class="content has-text-justified">
-          <p>
+<!--           <p>
             Make the man dance like the performer.
-          </p>
+          </p> -->
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
@@ -527,7 +527,7 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-<!--         <h3 class="title is-4">Re-rendering the input video</h3> --> -->
+<!--         <h3 class="title is-4">Re-rendering the input video</h3> --> 
         <div class="content has-text-justified">
 <!--           <p>
             Using 3D, you can synthesize moving humans from random video resources.
@@ -556,7 +556,7 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-<!--         <h3 class="title is-4">Re-rendering the input video</h3> --> -->
+<!--         <h3 class="title is-4">Re-rendering the input video</h3> --> 
         <div class="content has-text-justified">
 <!--           <p>
             Using 3D, you can synthesize moving humans from random video resources.
@@ -586,7 +586,7 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Dance like Michael Jackson!</h3> -->
+        <h3 class="title is-4">Dance like Michael Jackson!</h3> 
         <div class="content has-text-justified">
 <!--           <p>
             Using 3D, you can synthesize moving humans from random video resources.
@@ -615,7 +615,7 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Dance like Gene Kelly!</h3> -->
+        <h3 class="title is-4">Dance like Gene Kelly!</h3> 
         <div class="content has-text-justified">
 <!--           <p>
             Using 3D, you can synthesize moving humans from random video resources.
@@ -644,7 +644,7 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Skating</h3> -->
+        <h3 class="title is-4">Skating</h3> 
         <div class="content has-text-justified">
 <!--           <p>
             Using 3D, you can synthesize moving humans from random video resources.
@@ -673,7 +673,7 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Ballet</h3> -->
+        <h3 class="title is-4">Ballet</h3> 
         <div class="content has-text-justified">
 <!--           <p>
             Using 3D, you can synthesize moving humans from random video resources.
@@ -702,7 +702,7 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Motion from Online Relaxation Course</h3> -->
+        <h3 class="title is-4">Motion from Online Relaxation Course</h3> 
         <div class="content has-text-justified">
 <!--           <p>
             Using 3D, you can synthesize moving humans from random video resources.
@@ -732,7 +732,7 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Skate like Michelle Kwan!</h3> -->
+        <h3 class="title is-4">Skate like Michelle Kwan!</h3> 
         <div class="content has-text-justified">
 <!--           <p>
             Using 3D, you can synthesize moving humans from random video resources.
@@ -762,7 +762,7 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Make William Dance!</h3> -->
+        <h3 class="title is-4">Make William Dance!</h3> 
         <div class="content has-text-justified">
 <!--           <p>
             Using 3D, you can synthesize moving humans from random video resources.
@@ -775,7 +775,7 @@
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr49_10"
+            <source src="./static/videos/testcvpr49_10.mp4"
                     type="video/mp4">
           </video>
         </div>
