--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     <!-- from back -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">3DHM Enables Animations Only from Back</h2>
+        <h2 class="title is-3">3DHM Enables Animations from just the Back View</h2>
 
         <!-- Re-rendering. -->
 <!--         <h3 class="title is-4">3DHM Enables Animations Only from Back</h3> -->
