--- a/index.html
+++ b/index.html
@@ -466,13 +466,13 @@
     <!-- various viewpoints -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">360 degree Viewpoints</h2>
+        <h2 class="title is-3">360 degree Camera Viewpoints</h2>
 
         <!-- Re-rendering. -->
 <!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
         <div class="content has-text-justified">
           <p>
-            With 3D control, you can synthesize moving humans from different viewpoints.
+            With 3D control, you can synthesize moving humans from different camera viewpoints.
           </p>
         </div>
         <div class="content has-text-centered">
