--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <!-- different camera angle -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">3DHM Enables Random Camera Angles</h2>
+        <h2 class="title is-3">3DHM Enables Random Camera Azimuth</h2>
 
         <!-- Re-rendering. -->
 <!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
