--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 <!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
         <div class="content has-text-justified">
           <p>
-            Using 3D, you can synthesize moving humans from different camera angles.
+            Using 3D, you can synthesize moving humans from different camera azimuths.
           </p>
         </div>
         <div class="content has-text-centered">
@@ -434,8 +434,11 @@
         <h2 class="title is-3">Human Motion from Text</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Prompt: A person turns to his right and paces back and forth. </h3>
+<!--         <h3 class="title is-4">Prompt: A person turns to his right and paces back and forth. </h3> -->
         <div class="content has-text-justified">
+          <p style="color: #82CAFF;">
+            Text Input: A person turns to his right and paces back and forth.
+          </p>
           <p>
             Using 3D, you can synthesize moving humans from text input.
           </p>
@@ -547,36 +550,6 @@
     <!--/ Animation. -->
 
 
-
-    <!-- Animation. -->
-    <div class="columns is-centered">
-      <div class="column is-full-width">
-<!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
-
-        <!-- Re-rendering. -->
-<!--         <h3 class="title is-4">Re-rendering the input video</h3> --> 
-        <div class="content has-text-justified">
-<!--           <p>
-            Using 3D, you can synthesize moving humans from random video resources.
-          </p> -->
-        </div>
-        <div class="content has-text-centered">
-          <video id="replay-video"
-                 controls
-                 muted
-                 preload
-                 playsinline
-                 height="100%" autoplay>
-            <source src="./static/videos/testcvpr2_21.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <!--/ Re-rendering. -->
-
-      </div>
-    </div>
-    <!--/ Animation. -->
-
         <!-- Animation. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
@@ -606,18 +579,17 @@
     </div>
     <!--/ Animation. -->
 
-
-        <!-- Animation. -->
+     <!-- Animation. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Dance like Michael Jackson!</h3> 
+<!--         <h3 class="title is-4">Re-rendering the input video</h3> --> 
         <div class="content has-text-justified">
-<!--           <p>
-            Using 3D, you can synthesize moving humans from random video resources.
-          </p> -->
+          <p>
+            Make the woman walk like the performer.
+          </p>
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
@@ -626,7 +598,7 @@
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr4_15.mp4"
+            <source src="./static/videos/testcvpr2_21.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -636,34 +608,8 @@
     </div>
     <!--/ Animation. -->
 
-      <!-- Animation. -->
-    <div class="columns is-centered">
-      <div class="column is-full-width">
-<!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
-        <!-- Re-rendering. -->
-        <h3 class="title is-4">Dance like Gene Kelly!</h3> 
-        <div class="content has-text-justified">
-<!--           <p>
-            Using 3D, you can synthesize moving humans from random video resources.
-          </p> -->
-        </div>
-        <div class="content has-text-centered">
-          <video id="replay-video"
-                 controls
-                 muted
-                 preload
-                 playsinline
-                 height="100%" autoplay>
-            <source src="./static/videos/testcvpr10genlly1.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <!--/ Re-rendering. -->
-
-      </div>
-    </div>
-    <!--/ Animation. -->
+       
 
     <!-- Animation. -->
     <div class="columns is-centered">
@@ -729,7 +675,7 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-        <h3 class="title is-4">Motion from Online Relaxation Course</h3> 
+        <h3 class="title is-4">Online Relaxation Course</h3> 
         <div class="content has-text-justified">
 <!--           <p>
             Using 3D, you can synthesize moving humans from random video resources.
@@ -752,7 +698,64 @@
     </div>
     <!--/ Animation. -->
 
+     <!-- Animation. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+<!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
+        <!-- Re-rendering. -->
+        <h3 class="title is-4">Dance like Michael Jackson!</h3> 
+        <div class="content has-text-justified">
+<!--           <p>
+            Using 3D, you can synthesize moving humans from random video resources.
+          </p> -->
+        </div>
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 height="100%" autoplay>
+            <source src="./static/videos/testcvpr4_15.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <!--/ Re-rendering. -->
+
+      </div>
+    </div>
+    <!--/ Animation. -->
+
+      <!-- Animation. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+<!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
+
+        <!-- Re-rendering. -->
+        <h3 class="title is-4">Dance like Gene Kelly!</h3> 
+        <div class="content has-text-justified">
+<!--           <p>
+            Using 3D, you can synthesize moving humans from random video resources.
+          </p> -->
+        </div>
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 height="100%" autoplay>
+            <source src="./static/videos/testcvpr10genlly1.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <!--/ Re-rendering. -->
+
+      </div>
+    </div>
+    <!--/ Animation. -->
+    
     <!-- Animation. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
