--- a/index.html
+++ b/index.html
@@ -497,11 +497,11 @@
         <h2 class="title is-3">More Animations</h2>
 
         <!-- Re-rendering. -->
-<!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
+        <h3 class="title is-4">Make the man dance like the performer</h3>
         <div class="content has-text-justified">
-          <p>
+<!--           <p>
             Make the man dance like the performer.
-          </p>
+          </p> -->
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
@@ -585,11 +585,11 @@
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
         <!-- Re-rendering. -->
-<!--         <h3 class="title is-4">Re-rendering the input video</h3> --> 
+        <h3 class="title is-4">Make the woman walk like the performer</h3> 
         <div class="content has-text-justified">
-          <p>
+<!--           <p>
             Make the woman walk like the performer.
-          </p>
+          </p> -->
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
