--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
 
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<!-- <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
       <span aria-hidden="true"></span>
@@ -131,7 +131,7 @@
 
   </div>
 </nav>
-
+ -->
 
 <section class="hero">
   <div class="hero-body">
