--- a/index.html
+++ b/index.html
@@ -786,8 +786,7 @@
     <!--/ Animation. -->
 
 
-    <!-- Animation. -->
-    <div class="columns is-centered">
+<!--      <div class="columns is-centered">
       <div class="column is-full-width">
 <!--         <h2 class="title is-3">Human Motion from Random Video Resouces</h2>
 
@@ -812,9 +811,8 @@
         <!--/ Re-rendering. -->
 
       </div>
-    </div>
-    <!--/ Animation. -->
-
+    </div> 
+ -->
 
   
 
