--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
-          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="steve" autoplay muted loop playsinline height="100%">
             <source src="./static/videos/testcvpr4_27.mp4"
                     type="video/mp4">
           </video>
